[package]
name = "telegram-bot-yincha"
version = "0.1.0"
authors = ["Garfield Lee <openpgp@550.moe>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
yinchabot = { path = "./lib" }
dotenv = "^0.15.0"
tokio = { version = "^1.5.0", features = ["rt-multi-thread", "macros"] }
log = "^0.4.14"
pretty_env_logger = "^0.4.0"
teloxide = "^0.5.0"
