[package]
name = "yinchabot"
version = "0.1.0"
authors = ["Garfield Lee <openpgp@550.moe>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
log = "^0.4.14"
rand = "^0.8.3"
futures = "0.3.5"
teloxide = { version = "^0.5.0", features = ["auto-send"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
directories = "^3.0.0"
chrono = "^0.4.19"
